2007-07-14  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam Weinig

        Initial check-in for <rdar://problem/3154486> - Supporting FTP directory listings in the browser

        * WebView/WebPreferenceKeysPrivate.h: Added preference keys for the FTP template location, as well as to force 
          FTP directory listings, bypassing the policy delegate.  This is necessary to test the new feature until browser
          policy delegate support is added.

        * WebView/WebPreferences.m:
        (-[WebPreferences _setFTPDirectoryTemplatePath:]):
        (-[WebPreferences _ftpDirectoryTemplatePath]):
        (-[WebPreferences _setForceFTPDirectoryListings:]):
        (-[WebPreferences _forceFTPDirectoryListings]):
        * WebView/WebPreferencesPrivate.h:
        * WebView/WebView.mm:
        (-[WebView _updateWebCoreSettingsFromPreferences:]):

2007-07-13  Anders Carlsson  <andersca@apple.com>

        Reviewed by Maciej.

        <rdar://problem/5290103> Assert failure when loading page with multipart resource
        
        Don't try to call the delegate method if the resource object doesn't exist in the 
        identifier map. When a multipart resource has finished loading one part, it is removed from the
        web view identifier map. 
        
        This is not an ideal fix, a better fix would be to special-case multipart resources and not remove
        them when the first part has finished loading. I've filed <rdar://problem/5335034> to track doing that.
        
        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::dispatchDidReceiveAuthenticationChallenge):
        (WebFrameLoaderClient::dispatchDidCancelAuthenticationChallenge):
        (WebFrameLoaderClient::dispatchDidReceiveResponse):
        (WebFrameLoaderClient::willCacheResponse):
        (WebFrameLoaderClient::dispatchDidReceiveContentLength):
        (WebFrameLoaderClient::dispatchDidFinishLoading):